7047697: MethodHandle.invokeExact call for wrong method causes VM failure if run with -Xcomp

Reviewed-by: never, twisti